# data-transformations

./: Dockerfile  Makefile  README.md  pyproject.toml
analytics/: .user.yml  dbt_project.yml  profiles.yml
analytics/macros/: cleaning.sql  extract_cdc_deleted_at.sql  extract_cdc_updated_at.sql
analytics/models/bombe/: customer_attributes.sql  schema.yml
analytics/models/financial_reports/common_cte/: account_balance.sql  gl_account_balance.sql  gl_path.sql  splits.sql
analytics/models/financial_reports/profit_loss_statement/: profit_loss_ephemeral.sql  profit_loss_statement.sql  schema.yml
analytics/models/history/approval/: hist_approval__approvals.sql  schema.yml
analytics/models/history/audit/: hist_audit__events.sql  schema.yml
analytics/models/history/coa/: hist_coa__coas.sql  hist_coa__draft_accounts.sql  hist_coa__gl_accounts.sql  hist_coa__gl_aliases.sql  hist_coa__gl_drafts.sql  hist_coa__gls.sql  schema.yml
analytics/models/history/customer/: hist_customer__attributes.sql  hist_customer__credentials.sql  hist_customer__customers.sql  hist_customer__key_definitions.sql  hist_customer__sign_in_attribute_verifications.sql  hist_customer__sign_in_attributes.sql  hist_customer__type_definitions.sql  hist_customer__unverified_customers.sql  schema.yml
analytics/models/history/ledger/: hist_ledger__accounts.sql  hist_ledger__aliases.sql  hist_ledger__limit_groups.sql  hist_ledger__limits.sql  hist_ledger__owners.sql  hist_ledger__splits.sql  hist_ledger__transactions.sql  hist_ledger__utilizations.sql  schema.yml
analytics/models/history/parameter/: hist_parameter__parameters.sql  schema.yml
analytics/tests/generic/: assert_value_greater_than_zero.sql  status_reason_not_null.sql
data_transformations/assets/: airbyte.py
data_transformations/assets/dbt/: analytics.py  historical.py
data_transformations/configs/: airbyte.py  configs.py  constants.py
data_transformations/definitions/: analytics.py  historical.py
data_transformations/resources/: __init__.py  airbyte.py  clickhouse.py
data_transformations/utils/: __init__.py  airbyte.py  automation.py
tests/test_assets/: test_dbt_translators.py
tests/test_configs/: test_configs.py
tests/test_resources/: test_clickhouse_resource.py
tests/test_utils/: test_airbyte_utils.py
(+88 files in other folders)
